[package]
authors = ["Jan Tojnar <jtojnar@gmail.com>"]
description = "Bindings for LanguageTool grammar checking server"
keywords = ["languagetool", "grammar", "grammar-checking", "nlp"]
license = "MIT"
name = "languagetool"
readme = "README.md"
repository = "https://github.com/patronus-checker/languagetool-rs.git"
version = "0.1.1"

[dependencies]
reqwest = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "1.0.2"
