[package]
authors = ["Jan Tojnar <jtojnar@gmail.com>"]
description = "Bindings for LanguageTool grammar checking server"
keywords = ["languagetool", "grammar", "grammar-checking", "nlp"]
license = "MIT"
name = "languagetool"
readme = "README.md"
repository = "https://github.com/patronus-checker/languagetool-rs.git"
version = "0.1.2"

[dependencies]
reqwest =  { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
